# termux-tools

./: .gitignore  Makefile.am  README.md  configure.ac  init-termux-properties.sh.in  motd.sh  termux-login.sh.in  termux.properties
.github/workflows/: build.yml
doc/: Makefile.am  termux.1.md.in
mirrors/: Makefile.am  default
mirrors/asia/: linux.domainesia.com  mirror.albony.in  mirror.albony.xyz  mirror.bardia.tech  mirror.freedif.org  mirror.jeonnam.school  mirror.meowsmp.net  mirror.nag.albony.in  mirror.nevacloud.com  mirror.rinarin.dev  mirror.textcord.xyz  mirror.twds.com.tw  mirrors.cbrx.io  mirrors.in.sahilister.net  mirrors.krnk.org  mirrors.nguyenhoang.cloud  mirrors.omsinchan.ac.th  mirrors.ravidwivedi.in  mirrors.saswata.cc  mirrors.saswata.xyz  termux.dapitt.eu.org  termux.niranjan.co  tmx.xvx.my.id
mirrors/china/: mirror.sjtu.edu.cn  mirrors.aliyun.com  mirrors.njupt.edu.cn  mirrors.qvq.net.cn  mirrors.scau.edu.cn  mirrors.sdu.edu.cn  mirrors.zju.edu.cn
mirrors/chinese_mainland/: mirror.iscas.ac.cn  mirror.nyist.edu.cn  mirror.sjtu.edu.cn  mirrors.aliyun.com  mirrors.bfsu.edu.cn  mirrors.cernet.edu.cn  mirrors.cqupt.edu.cn  mirrors.hust.edu.cn  mirrors.nju.edu.cn  mirrors.pku.edu.cn  mirrors.sau.edu.cn  mirrors.sdu.edu.cn  mirrors.sustech.edu.cn  mirrors.tuna.tsinghua.edu.cn  mirrors.ustc.edu.cn  mirrors.zju.edu.cn
mirrors/europe/: cdn.lumito.net  easycli.sh  ftp.agdsn.de  ftp.fau.de  ftp.icm.edu.pl  grimler.se  is.mirror.flokinet.net  md.mirrors.hacktegic.com  mirror.accum.se  mirror.autkin.net  mirror.bouwhuis.network  mirror.cutie.dating  mirror.diyarciftci.xyz  mirror.init7.net  mirror.leitecastro.com  mirror.mwt.me  mirror.polido.pt  mirror.sunred.org  mirror.termux.dev  mirrors.cfe.re  mirrors.de.sahilister.net  mirrors.medzik.dev  mirrors.sahilister.in  mirrors.thebosshacker.in  nl.mirror.flokinet.net  packages.termux.dev  ro.mirror.flokinet.net  termux.3san.dev  termux.astra.in.ua  termux.cdn.lumito.net  termux.javinator9889.com  termux.librehat.com  termux.mentality.rip
mirrors/north_america/: gnlug.org  mirror.csclub.uwaterloo.ca  mirror.fcix.net  mirror.mwt.me  mirror.quantum5.ca  mirror.vern.cc  mirrors.utermux.dev  plug-mirror.rcac.purdue.edu  termux.danyael.xyz
mirrors/oceania/: mirror.endianness.com  mirrors.middlendian.com  mirrors.wale.id.au
mirrors/russia/: mirror.mephi.ru  repository.su
mirrors/south_america/: mirrors.rda.run
motds/: Makefile.am  motd.sh.in
scripts/: Makefile.am  chsh.in  dalvikvm.in  login.in  pkg.in  su.in  termux-backup.in  termux-change-repo.in  termux-info.in  termux-logout.in  termux-open-url.in  termux-open.in  termux-reload-settings.in  termux-reset.in  termux-restore.in  termux-setup-storage.in  termux-title.in  termux-wake-lock.in  termux-wake-unlock.in  wall.in
src/: Makefile.am  cmd.c  termux_access.c
